nav bar title fix alignment

--- a/css/dashboard-worker.css
+++ b/css/dashboard-worker.css
@@ -51,7 +51,7 @@ body {
 }
 
 .logo_name {
-    padding-left: 50px;
+    padding-left: 64px;
 }
 
 .side-nav #bttn{
